# httpreq

./: README.md  meson.build
data/: httpreq.appdata.xml  httpreq.desktop
src/: Application.vala  main.vala  window.vala
src/APINotebook/: APINotebook.vala  RequestPane.vala  ResponsePane.vala
